fixed issue with crystal alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,7 @@ h1{
 }
 
 .crystals{
-    margin: 20px;
-    width: auto;
+    margin: 20px;  
 } 
 
 .pic{
